# rust_transformer_cli

./: Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md
docs/: DLL_USAGE.md  QUICK_REFERENCE.md  rust_transformer.h
examples/: README.md  example_c.c  example_csharp.cs  example_powershell.ps1  example_python.py
src/: embed_utils.rs  lib.rs  main.rs
src/embed_utils/jina_implementation/: mod.rs
