[package]
name = "rust_transformer_cli"
version = "0.4.0"
edition = "2024"
authors = ["OpusTecnica <https://github.com/opustecnica/rust_transformer_cli>"]
description = "cli/dll sentence transformer"

[lib]
name = "rust_transformer"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust_transformer_cli"
path = "src/main.rs"

[dependencies]
# 1. CLI Parsing
clap = { version = "4.0", features = ["derive"] }

# 2. Serialization for Output
hf-hub = { version = "0.4.2", default-features = false, features = [
    "rustls-tls",
    "ureq",
] }
libc = "0.2"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.17"
tokenizers = "0.22.2"

# macOS: use Accelerate + Metal
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", default-features = false, features = [
    "accelerate",
    "metal",
] }
candle-nn = { version = "0.9.1", default-features = false, features = [
    "accelerate",
    "metal",
] }
candle-transformers = { version = "0.9.1", default-features = false, features = [
    "accelerate",
    "metal",
] }
accelerate-src = "0.3.2"


# Linux/Windows: use Intel MKL
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }

# OpenSSL for non-Windows
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
